<resources>
    <string name="app_name">Calorie meter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">S T C</string>
    <string name="nav_header_subtitle">jamshidbekollanazarov@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_daily_meal">daily meals</string>
    <string name="menu_favourite">Favourites</string>
    <string name="my_app_description_text">Myhellohellohellohellohellohellohellohello</string>
    <string name="my_app_description_title">Hello</string>
    <string name="my_app_register">Register</string>
    <string name="my_app_sign_in">sign in</string>
    <string name="full_name">Full name</string>
    <string name="email">Emal</string>
    <string name="password">password</string>
    <string name="you_have_an_account">You have an account?</string>
    <string name="you_have_not_a_account">You have not a account?</string>
    <string name="text_daily_meal"> Daily meal</string>
    <string name="text_favourite"> Favourites</string>
    <string name="text_home"> Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My cart</string>
    <string name="menu_my_cart">My cart</string>
    <string name="text_my_cart">My cart text</string>
    <string name="log_out">Log out</string>
    <string name="search_your_food">Search your food</string>
    <string name="top_of_search">What do you want?</string>
    <string name="hello">Hello ali</string>
    <string name="product_name">Product name</string>
</resources>